hphp/hack/test/typecheck/class_refinements/accessloose.php.rust_elab.exp
File "accessloose.php", line 52, characters 10-16:
A `where` type constraint is violated here (Typing[4323])
  File "accessloose.php", line 19, characters 10-16:
  This is the method with `where` type constraints
  File "accessloose.php", line 19, characters 62-62:
  Type member `T` cannot be accessed
  File "accessloose.php", line 19, characters 58-62:
    on a loose refinement
File "accessloose.php", line 45, characters 18-20:
Invalid argument (Typing[4468])
  File "accessloose.php", line 19, characters 62-62:
  Type member `T` cannot be accessed
  File "accessloose.php", line 39, characters 19-44:
    on a loose refinement
